# core-forecasting-etl

./: README.md  config.json  config.py  create-folders-for-all-pipelines.py  generate-config-json-commands.sh  generate_create_config_commands.py  get-functions.py
.github/workflows/: dev-15min-breakdown-dollarsandtrans.yaml  dev-15min-breakdown-ingredient.yaml  dev-15min-breakdown-item.yaml  dev-15min-breakdown-redundancy-dollarsandtrans.yaml  dev-15min-breakdown-redundancy-itemanding.yaml  dev-baseline-daily-sales-algorithm.yaml  dev-baseline-dollars-and-trans.yaml  dev-baseline-ingredient.yaml  dev-baseline-itemcount.yaml  dev-baseline-loader.yaml  dev-baseline-step-function.yaml  dev-csvtojson-2weekout.yaml  dev-csvtojson-3weekout.yaml  dev-csvtojson-fallback.yaml  dev-csvtojson-redundancy.yaml  dev-dataprep-incremental-dollarsandtrans.yaml  dev-dataprep-incremental-itemcount.yaml  dev-forecast-inference-naive-daily-itemcount.yaml  (+134 more)
core-forecast-slack-alerts/core-forecast-slack-alert-truncate/: README.md  manifest.yaml  pyproject.toml
core-forecast-slack-alerts/core-forecast-slack-alert-truncate/aws/: cloudformation.yaml
core-forecast-slack-alerts/core-forecast-slack-alert-truncate/core_forecast_slack_alert_truncate/: config.json  expected_products_QC.sql  itemlevelcount_15min_QC.sql  lambda_function.py  lookup_ingredients_QC.sql  lookup_ingredients_backup.sql
core-forecast-slack-alerts/core-forecast-slack-alert-truncate/local/: lambda_build.sh  lambda_run.sh
core-forecast-slack-alerts/core-forecast-slack-alert-truncate/test/unit/: test_lambda_function.py
(+592 files in other folders)
